syntax = "proto3";

option java_multiple_files = true;
option java_package = "it.trenical.common.proto";


message DateRange {
  int64 from = 1;
  int64 to = 2;
}

message Empty {

}